selectively apply refactorings for new java