@@ -36,12 +36,12 @@ public class SessionTable extends AgentXTable
         oid = new AgentXOID(OID);
 
         // register implemented columns
-        columns.addElement(new Long(2));
-        columns.addElement(new Long(3));
-        columns.addElement(new Long(4));
-        columns.addElement(new Long(5));
-        columns.addElement(new Long(6));
-        columns.addElement(new Long(7));
+        columns.addElement(Long.valueOf(2));
+        columns.addElement(Long.valueOf(3));
+        columns.addElement(Long.valueOf(4));
+        columns.addElement(Long.valueOf(5));
+        columns.addElement(Long.valueOf(6));
+        columns.addElement(Long.valueOf(7));
     }
 
     public SessionTable(boolean shared)
@@ -51,12 +51,12 @@ public class SessionTable extends AgentXTable
         oid = new AgentXOID(OID);
 
         // register implemented columns
-        columns.addElement(new Long(2));
-        columns.addElement(new Long(3));
-        columns.addElement(new Long(4));
-        columns.addElement(new Long(5));
-        columns.addElement(new Long(6));
-        columns.addElement(new Long(7));
+        columns.addElement(Long.valueOf(2));
+        columns.addElement(Long.valueOf(3));
+        columns.addElement(Long.valueOf(4));
+        columns.addElement(Long.valueOf(5));
+        columns.addElement(Long.valueOf(6));
+        columns.addElement(Long.valueOf(7));
     }
 
     public AgentXVarBind getVarBind(AgentXEntry entry, long column)
