@@ -813,7 +813,7 @@ public class AppletServlet extends HttpServlet implements I_LogListener
     * @see #getParameter(HttpServletRequest, String, String)
     */
    public static final boolean getParameter(HttpServletRequest req, String name, boolean defaultVal) {
-      Boolean b = new Boolean(getParameter(req, name, new Boolean(defaultVal).toString()));
+      Boolean b = Boolean.valueOf(getParameter(req, name, Boolean.valueOf(defaultVal).toString()));
       return b.booleanValue();
    }
 }
